@@ -3,6 +3,7 @@
 Feeds 6.x 1.X XXXX
 ------------------
 
+- #853194 andrewlevine, alex_b: Mapping: don't reset all targets.
 - #853144 alex_b: Consistent use of "replace" vs "update".
 - #850998 alex_b: Clean up file upload form. Note: If you supply file paths
   directly in the textfield rather than uploading them through the UI, you will
